Minor updates + new tam questions

--- a/cdss_1/patients/templates/patients/tam.html
+++ b/cdss_1/patients/templates/patients/tam.html
@@ -381,6 +381,39 @@
                         
                     </select>
                 </div>
+                <!-- Next two were added later and so have higher numbers -->
+                <br>
+                <br>
+                <div>
+                    <label for="q28">I was reassured when my clinical decision aligned with the AI CDSS recommendation</label>
+                    <br>
+                    <br>
+                    <select name="q28" id="q28" required>
+                        <option value="" selected disabled>Select an option</option>
+                        <option value="1">Strongly disagree</option>
+                        <option value="2">Disagree</option>
+                        <option value="3">Neither agree nor disagree</option>
+                        <option value="4">Agree</option>
+                        <option value="5">Strongly agree</option>
+                        
+                    </select>
+                </div>
+                <br>
+                <br>
+                <div>
+                    <label for="q29">I investigated further when my clinical decision was different from the AI CDSS recommendation</label>
+                    <br>
+                    <br>
+                    <select name="q29" id="q29" required>
+                        <option value="" selected disabled>Select an option</option>
+                        <option value="1">Strongly disagree</option>
+                        <option value="2">Disagree</option>
+                        <option value="3">Neither agree nor disagree</option>
+                        <option value="4">Agree</option>
+                        <option value="5">Strongly agree</option>
+                        
+                    </select>
+                </div>
                 <br>
                 <br>
                 <div>
