--- a/cdss_1/patients/templates/patients/patient_detail_demo.html
+++ b/cdss_1/patients/templates/patients/patient_detail_demo.html
@@ -43,7 +43,7 @@
                     <dd class="col-sm-9">{{ patient.ethnicity }}</dd>
 
                     {% if patient.imddecil and patient.imddecil != 'nan' %}
-                    <dt class="col-sm-3">IMDDECIL:</dt>
+                    <dt class="col-sm-3">Indices of multiple deprivation decile:</dt>
                     <dd class="col-sm-9">{{ patient.imddecil }}</dd>
                     {% endif %}
 
