--- a/copy/cdss_1_20240320/patients/templates/patients/patient_detail_simple_demo.html
+++ b/copy/cdss_1_20240320/patients/templates/patients/patient_detail_simple_demo.html
@@ -94,7 +94,7 @@
                     <dt class="col-sm-3">Ethnicity:</dt>
                     <dd class="col-sm-9">{{ patient.ethnicity }}</dd>
 
-                    <dt class="col-sm-3">IMDDECIL:</dt>
+                    <dt class="col-sm-3">Indices of multiple deprivation decile:</dt>
                     <dd class="col-sm-9">{{ patient.imddecil }}</dd>
 
                     <dt class="col-sm-3">Co-morbidities:</dt>
