--- a/copy/cdss_1_20240320/patients/templates/patients/prediction_page_demo.html
+++ b/copy/cdss_1_20240320/patients/templates/patients/prediction_page_demo.html
@@ -266,7 +266,7 @@
                         td.classList.add(getColorClass(value));
                     }
 
-                    if (key === 'Prediction correct' || key === 'Higher threshold prediction correct') {
+                    if (key === 'Prediction matched real action' || key === 'Higher threshold prediction matched real action') {
                         const colorClass = getColorClass2(value);
                         // console.log(`Cell: ${key}, Value: ${value}, Color Class: ${colorClass}`);
                         if (colorClass) {
