--- a/cdss_1/patients/templates/patients/tam.html
+++ b/cdss_1/patients/templates/patients/tam.html
@@ -481,7 +481,7 @@
                 <br>
                 <br>
                 <div>
-                    <label for="q26">Overall, I think this AI CDSS has the potential to be a useful tool for antibiotic intravenous-to-oral switch</label>
+                    <label for="q26">Overall, I think this AI CDSS has the potential to be a useful tool for antibiotic intravenous-to-oral switch decision making</label>
                     <br>
                     <br>
                     <select name="q26" id="q26" required>
